<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="foodjoke_fragment">Jokes</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">main course</string>
    <string name="side_dish">side dish</string>
    <string name="dessert">dessert</string>
    <string name="appetizer">appetizer</string>
    <string name="salad">salad</string>
    <string name="bread">bread</string>
    <string name="soup">soup</string>
    <string name="beverage">beverage</string>
    <string name="sauce">sauce</string>
    <string name="snack">snack</string>
    <string name="drink">drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="apply">Apply</string>
</resources>