<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.ui.RecipesBottomSheetFragment">


        <TextView
            android:id="@+id/meal_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/meal_type"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:id="@+id/scrollView_meal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meal_type_textview">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_meal_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/main_course_chip"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/main_course_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_course" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/side_dish_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/side_dish" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/dessert_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dessert" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/appetizer_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/appetizer" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/salad_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salad" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/bread_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bread" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/soup_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soup" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/beverage_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beverage" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/sauce_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sauce" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/snack_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snack" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/drink_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drink" />

                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/diet_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/diet_type"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView_meal_type" />

        <HorizontalScrollView
            android:id="@+id/scrollView_diet_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diet_type_textview">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/diet_type_chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@+id/Gluten_Free_chip"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Gluten_Free_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gluten_free" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Ketogenic_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ketogenic" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Vegetarian_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegetarian" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Vegan_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vegan" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Pescetarian_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pescetarian" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Paleo_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paleo" />

                    <com.google.android.material.chip.Chip
                        style="@style/CustomChipStyle"
                        android:id="@+id/Primal_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/primal" />


                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>


        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView_diet_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>